import { RSKExplorerAPI } from "../../rskExplorerApi";
import { Emitter } from "../../types/emitter";
import { TransactionProvider } from "./transactionProvider";

export class TransactionProfiler extends Emitter {
  
  private address: string
  private transactionProvider: TransactionProvider
  private lastReceivedTransactionBlockNumber = -1
  
  constructor(address: string, rskExplorerApi: RSKExplorerAPI) {
    super()
    this.address = address
    this.transactionProvider = new TransactionProvider(address, rskExplorerApi)
  }

  async subscribe(): Promise<void> {
    await this.transactionProvider.getTransactionsPaginated(this.address.toLowerCase()).then(({ data }) => {
        this.lastReceivedTransactionBlockNumber = data.length ? data[0].blockNumber : -1
    })
    this.transactionProvider.on(this.address, (data) => {
      const { payload: transaction } = data
      if(transaction.blockNumber > this.lastReceivedTransactionBlockNumber) {
        this.lastReceivedTransactionBlockNumber = transaction.blockNumber
        this.emit(this.address, data)
      }
    })
    this.transactionProvider.subscribe()
  }

  unsubscribe(): void {
    this.removeAllListeners(this.address)
  }

}